# nanogpt-plus

./: README.md  config.py  pyproject.toml
configs/data/: openwebtext.yaml
configs/model/: gpt2_medium.yaml  gpt2_small.yaml
configs/training/: pretrain.yaml
examples/: 01_train_from_scratch.py  02_finetune_with_lora.py
nanogpt_plus/: __init__.py  config.py
nanogpt_plus/data/: __init__.py
nanogpt_plus/data/loaders/: __init__.py  collate_fn.py  test_data_loader.py  test_data_loader_component.py  text_loader.py
nanogpt_plus/models/: __init__.py  gpt.py  lora.py  test_lora.py  test_lora_component.py  test_model.py  test_model_component.py
nanogpt_plus/training/: __init__.py  test_train_component.py  trainer.py
nanogpt_plus/training/callbacks/: __init__.py
nanogpt_plus/training/optimizers/: __init__.py  lr_scheduler.py
nanogpt_plus/training/strategies/: __init__.py
nanogpt_plus/utils/: __init__.py  checkpoint_io.py  logging.py
tests/unit/: test_model.py
