[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanogpt-plus"
version = "0.1.0"
description = "轻量级、可扩展的GPT训练框架，支持LoRA/DPO/量化推理"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "tochikoma777", email = "brother.777.lei@gmail.com"}
]
keywords = ["gpt", "llm", "deep-learning", "pytorch", "lora", "training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.13.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "safetensors>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
distributed = [
    "deepspeed>=0.10.0",
    "accelerate>=0.22.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
    "auto-gptq>=0.4.0",
    "optimum>=1.12.0",
]
all = [
    "nanogpt-plus[dev,distributed,quantization]",
]

[project.urls]
Homepage = "https://github.com/tochikoma777/nanogpt-plus"
Documentation = "https://nanogpt-plus.readthedocs.io"
Repository = "https://github.com/tochikoma777/nanogpt-plus.git"
Issues = "https://github.com/tochikoma777/nanogpt-plus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanogpt_plus*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nanogpt_plus"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
